@startuml

package "Controllers (API)" <<Folder>> {
    class "MindmapStringController" as cntrl1
    class "ProjectTemplateController" as cntrl2
}

package "Services (UseCases)"<<Folder>> {
    class "MindmapStringController"  as serv1
    class "ProjectTemplateService" as serv2
}

package Repositories <<Folder>> {
    interface "MindmapStringRepository" as repo1
    interface "ProjectTemplateRepository" as repo2
}

package Models <<Folder>> {
    class "MindmapString" as ent1
    class "ProjectTemplate" as ent2
}



cntrl1 --> serv1
cntrl2 --> serv2

serv1 -down-> ent1
serv2 -up-> ent2


serv1 -> repo1
serv2 -> repo2

repo1 --> ent1
repo2 --> ent2

@enduml